modified EnumMaps into ImmutableMaps of guava and added GoldCardTest.java