@@ -1,28 +1,32 @@
 package it.polimi.ingsw.am11.cards.playable;
 
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Maps;
 import it.polimi.ingsw.am11.cards.util.*;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.EnumMap;
-import java.util.Map;
 import java.util.Optional;
 
 public class ResourceCard extends PlayableCard {
-    private final static EnumMap<Color, Integer> PLACING_REQUIREMENTS = new EnumMap<>(Map.of(
-            Color.BLUE, 0,
-            Color.RED, 0,
-            Color.GREEN, 0,
-            Color.PURPLE, 0
-    ));
-    private final EnumMap<Corner, CornerContainer> availableCornerOrItem;
+    private final static ImmutableMap<Color, Integer> PLACING_REQUIREMENTS = Maps.immutableEnumMap(
+            ImmutableMap.of(
+                    Color.RED, 0,
+                    Color.BLUE, 0,
+                    Color.GREEN, 0,
+                    Color.PURPLE, 0
+            )
+    );
+    private final @NotNull ImmutableMap<Corner, CornerContainer> availableCornerOrItem;
 
     private ResourceCard(@NotNull Builder builder) {
         super(builder);
-        this.availableCornerOrItem = builder.availableCornerOrItem;
+        this.availableCornerOrItem = Maps.immutableEnumMap(builder.availableCornerOrItem);
     }
 
     @Override
-    public PlayableCardType getType() {
+    public @NotNull PlayableCardType getType() {
         return PlayableCardType.RESOURCE;
     }
 
@@ -32,38 +36,38 @@ public class ResourceCard extends PlayableCard {
     }
 
     @Override
-    public EnumMap<Color, Integer> getPlacingRequirements() {
+    public ImmutableMap<Color, Integer> getPlacingRequirements() {
         return PLACING_REQUIREMENTS;
     }
 
     @Override
-    public PointsRequirementsType getPointsRequirements() {
+    public @NotNull PointsRequirementsType getPointsRequirements() {
         return PointsRequirementsType.CLASSIC;
     }
 
     @Override
-    public CornerContainer checkItemCorner(@NotNull Corner corner) {
+    public @Nullable CornerContainer checkItemCorner(@NotNull Corner corner) {
         return availableCornerOrItem.getOrDefault(corner, Availability.NOT_USABLE);
     }
 
     @Override
-    public Optional<Symbol> getSymbolToCollect() {
+    public @NotNull Optional<Symbol> getSymbolToCollect() {
         return Optional.empty();
     }
 
     public static class Builder extends PlayableCard.Builder {
-        private final EnumMap<Corner, CornerContainer> availableCornerOrItem;
+        private final @NotNull EnumMap<Corner, CornerContainer> availableCornerOrItem;
 
-        public Builder(int cardPoints, Color cardPrimaryColor) {
+        public Builder(int cardPoints, @NotNull Color cardPrimaryColor) {
             super(cardPoints, cardPrimaryColor);
             this.availableCornerOrItem = new EnumMap<>(Corner.class);
         }
 
-        public ResourceCard build() {
+        public @NotNull ResourceCard build() {
             return new ResourceCard(this);
         }
 
-        public Builder hasItemIn(@NotNull Corner corner, CornerContainer cornerContainer) {
+        public @NotNull Builder hasItemIn(@NotNull Corner corner, CornerContainer cornerContainer) {
             availableCornerOrItem.put(corner, cornerContainer);
             return this;
         }
